<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="csi.fhict.org.csi_week_1.ReportActivity"
    tools:showIn="@layout/activity_report"
    android:background="@drawable/background"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/Picture1"
            android:layout_alignLeft="@+id/imageView2"
            android:textColor="#ffffff"
            android:background="#504646"
            android:id="@+id/button2" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/GPS"
            android:layout_alignEnd="@+id/imageView2"
            android:layout_alignRight="@+id/imageView2"
            android:id="@+id/button3"
            android:textColor="#ffffff"
            android:background="#504646" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView2"
            android:src="@drawable/badguy"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/badguy2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Call"
            android:id="@+id/button4"
            android:textColor="#ffffff"
            android:background="#504646"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_centerInParent="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back"
            android:textColor="#ffffff"
            android:layout_alignBottom="@+id/button4"
            android:background="#504646"
            android:id="@+id/buttonBack" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Send"
            android:textColor="#ffffff"
            android:layout_alignRight="@id/imageView2"
            android:layout_alignBottom="@+id/button4"
            android:background="#504646"
            android:id="@+id/button6" />

    </RelativeLayout>

</LinearLayout>
