<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="csi.fhict.org.csi_week_1.MainActivity"
    tools:showIn="@layout/activity_main"
    android:weightSum="1"
    android:textAlignment="center"
    android:orientation="vertical"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/badguy"
        android:layout_gravity="center"
        android:padding="1dp"
        android:contentDescription="@string/description"
        android:background="#ffffff" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#26ffffff"
                android:layout_marginBottom="3dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Name1"
                        android:id="@+id/tVName1"
                        android:layout_marginLeft="25dp"
                        android:textColor="#ffffff"
                        android:textSize="25sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Name2"
                        android:id="@+id/tVName2"
                        android:layout_marginLeft="170dp"
                        android:textColor="#ffffff"
                        android:textSize="25sp"/>


                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#26ffffff"
                android:layout_marginBottom="3dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Gender1"
                        android:id="@+id/tVGender1"
                        android:textColor="#ffffff"
                        android:layout_marginLeft="25dp"
                        android:textSize="25sp"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Gender2"
                        android:id="@+id/tvGender2"
                        android:layout_marginLeft="145dp"
                        android:textColor="#ffffff"
                        android:textSize="25sp"/>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#26ffffff"
                android:layout_marginBottom="3dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Age1"
                        android:id="@+id/tVAge1"
                        android:textSize="25sp"
                        android:layout_marginLeft="25dp"
                        android:textColor="#ffffff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Age2"
                        android:id="@+id/tVAge2"
                        android:textSize="25sp"
                        android:layout_marginLeft="207dp"
                        android:textColor="#ffffff" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#26ffffff">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Bounty1"
                        android:id="@+id/tVBounty1"
                        android:textSize="25sp"
                        android:layout_marginLeft="25dp"
                        android:textColor="#ffffff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Bounty2"
                        android:id="@+id/tVBounty2"
                        android:textSize="25sp"
                        android:layout_marginLeft="145dp"
                        android:textColor="#ffffff" />

                </LinearLayout>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Details"
                android:id="@+id/tVDetails"
                android:textSize="20sp"
                android:textColor="#ffffff" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:id="@+id/scrollView" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Detailinfo"
                    android:id="@+id/tVScroll"
                    android:textColor="#ffffff" />
            </ScrollView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Report"
                android:id="@+id/button"
                android:textColor="#ffffff"
                android:layout_marginTop="10dp"
                android:background="#373535" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
